style/style.css
html {
  scroll-behavior: smooth;
}

header,
section,
footer,
.desktop_img3 {
  width: clamp(23.4375rem, 100%, 90rem);
  margin-inline: auto;
  font-family: Inter, sans-serif;
}

header {
  height: 6rem;
  padding: 1.0625rem 2rem;
}

.headline_section {
  padding: 4rem 10.3125rem;
  gap: 8.125rem;
}

.location_section, .headline_section {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Inter Fonts Default */
.inter5_16 {
  font-size: 1rem;
  font-weight: 500;
  letter-spacing: 0.1px;
}

/* Flexbox Default*/
.DispDefault {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Header Section */
.navigation,
.nav_items {
  display: flex;
  gap: 24px;
}

.action_btn,
.action_btn_2,
.action_btn3 {
  width: 6.25rem;
  height: 3rem;
  border-radius: 2rem;
  background-color: #000;
  font-weight: 700;
  line-height: 1.5rem;
  display: block;
}

/* Headline Section */
.headline_content {
  width: clamp(20.4375rem, 100%, 30.625rem);
}

.headline_title {
  font-size: 3.5rem;
  font-weight: 900;
  line-height: 3.75rem;
  letter-spacing: -1px;
}

.headline_text {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 28px;
  margin: 1.5rem 0 2.5rem 0;
}

.purchased_box {
  display: flex;
  align-items: center;
  gap: 20px;
}

.purchased_about {
  width: 14.75rem;
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
}

/* Feature Section*/
.feature_container {
  display: flex;
  padding: 4rem 9.375rem;
  gap: 1.875rem;
  background-color: #f3f3f3;
}

.feature_box {
  width: clamp(17.4375rem, 100%, 22.5rem);
}

.feature_user {
  display: flex;
  align-items: center;
  gap: 1rem;
  font-size: 1.125rem;
  font-weight: 700;
  line-height: 1.75rem;
}

.feature_review {
  margin-top: 1rem;
  line-height: 1.5rem;
}

/* Content Section */
.content_section {
  padding: 6rem 9.375rem;
  background-color: #000;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8.25rem;
}

.content_container,
.tablet_img2 {
  width: clamp(20.4375rem, 100%, 60rem);
  color: #fff;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.content_heading,
.location_headline {
  font-size: 1.5rem;
  font-weight: 900;
  line-height: 2rem;
}

.content_text {
  width: 31.4375rem;
  line-height: 2rem;
}

.content_text p:first-child {
  margin-bottom: 1rem;
}

/* NONE BLOCK ELEMENTS */
.burger_icon,
.tablet_img1,
.small_tablet_img1,
.mobile_img1,
.tablet_img2,
.tablet_small_img2,
.mobile_img2,
.tablet_img3,
.tablet_small_img3,
.mobile_img3,
.logo_footer_1024,
.logo_footer_375 {
  display: none;
}

/* Location banner Section */
.location_section {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.banner_container {
  width: clamp(15.4375rem, 100%, 33.75rem);
  text-align: center;
  color: #fff;
  position: absolute;
}

.location_headline {
  font-size: 2.5rem;
  line-height: 3rem;
  letter-spacing: -0.5px;
  margin: .75rem .625rem;
}

.action_btn3 {
  height: 2.5rem;
  padding: .375rem 1rem;
  background-color: #F3F3F3;
  color: #000;
  margin: 0 auto;
}

/*FOOTER SECTION */

.footer_container {
  height: 21rem;
  padding: 6rem 9.375rem;
  display: flex;
  background-color: #000;
}

.footer_info_box {
  width: clamp(15.4375rem, 100%, 228px);
}

.footer_info_box h4 {
  font-weight: 700;
  line-height: 1.5rem;
  margin-bottom: 1rem;
}

.footer_info_box a,
h4,
.subscribe_msg {
  color: #FFF;
  font-weight: 400;
  line-height: 1.25rem;
}

.footer_info_box li {
  margin: .5rem 0;
}

.subscribe_msg {
  font-size: .875rem;
  opacity: 0.4000000059604645;
}

@media only screen and (max-width: 1188px) {
  .content_container {
    display: none;
  }

  .content_img2 {
    width: 100%;
  }
}

/*Media Query 1024px (headline section) */
@media only screen and (max-width: 64rem) {

  .tablet_img1,
  .tablet_img3 {
    width: clamp(13.125rem, 100%, 64rem);
    display: block;
  }

  .headline_section {
    flex-wrap: wrap;
    padding: 2rem;
    gap: 20px;
  }

  .headline_content {
    width: clamp(20.4375rem, 100%, 39.375rem);
    text-align: center;
  }

  .purchased_box {
    justify-content: center;
    margin: 0 4.375rem;
  }

  .purchased_about {
    width: 23.125rem;
  }

  /* FEATURE SECTION  */
  .feature_container {
    padding: 2.4375rem 2rem;
    gap: 3.4375rem;
  }

  .desktop_img1,
  .content_img2,
  .desktop_img3,
  .footer_info_box:first-child,
  .footer_info_box:last-child {
    display: none;
  }

  /* tablet_img2 */
  .tablet_img2,
  .content_container,
  .tablet_img3,
  .logo_footer_1024 {
    display: block;
  }

  .content_section {
    flex-wrap: wrap;
    padding: 2rem 2rem 4rem 2rem;
    gap: 4rem;
  }

  .content_container {
    display: flex;
    flex-direction: row;
    gap: 8.0625rem;
  }

  .content_heading,
  .content_text {
    width: clamp(20.4375rem, 100%, 25.9375rem);
  }

  .footer_info_box {
    height: 13.6875rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  }

  .footer_container {
    padding: 2.8125rem 2rem;
  }

  .logo_footer_1024 {
    width: 5.4375rem;
    margin-bottom: 3rem;
  }

  .navigation_box {
    height: 9rem;
  }
}

/*Media Query 744px (headline section) */
@media only screen and (max-width: 46.5rem) {

  .tablet_img1,
  .tablet_img2,
  .tablet_img3 {
    display: none;
  }

  .small_tablet_img1,
  .tablet_small_img2,
  .tablet_small_img3 {
    width: clamp(19.875rem, 100%, 43.5rem);
    display: block;
  }

  .headline_content {
    width: clamp(23.4375rem, 100%, 43.5rem);
    margin: 0 0 1.5rem 0;
  }

  .purchased_box {
    flex-direction: column;
  }

  .headline_title {
    font-size: 2.5rem;
  }

  .headline_section {
    padding: 0 1.5rem;
  }

  /* FEATURE SECTION  */
  .feature_container {
    flex-wrap: wrap;
    justify-content: center;
    gap: 1.25rem;
    padding: 1.25rem 0;
  }

  .feature_box {
    width: clamp(20.4375rem, 100%, 46.5rem);
  }

  .feature_user,
  .feature_review {
    justify-content: center;
    text-align: center;
  }

  .content_container {
    flex-direction: column;
    align-items: center;
    gap: 1.8125rem;
    overflow: hidden;
  }

  .content_heading,
  .content_text {
    width: clamp(12.5rem, 100%, 43.5rem);
    text-align: center;
    line-height: 2rem;
    letter-spacing: 0.1px;
  }

  .content_section {
    padding: 1.5rem;
  }

  .tablet_small_img3 {
    width: clamp(23.4375rem, 100%, 46.5rem);
    display: block;
  }

  .footer_container {
    height: 242.459px;
    padding: 2.5rem 1.375rem;
    align-items: center;
    gap: .3125rem;
  }
}

/* Media Query 600px*/
@media only screen and (max-width: 37.5rem) {

  .action_btn,
  .navigation {
    display: none;
  }

  .banner_container,
  .location_headline {
    font-size: 1.125rem;
    margin: 0;
  }

  body {
    overflow-x: hidden;
  }
}

/* Media Query 375px (Header section - headline section)*/
@media only screen and (max-width: 23.4375rem) {

  /* Header and Headline Sections */
  .burger_icon,
  .mobile_img1,
  .mobile_img2,
  .mobile_img3,
  .logo_footer_375 {
    display: block;
  }

  .small_tablet_img1,
  .tablet_small_img2,
  .tablet_small_img3,
  .logo_footer_1024 {
    display: none;
  }

  .headline_content {
    padding: 0 1.5rem;
  }

  .purchased_about,
  .content_heading,
  .content_text,
  .mobile_img3 {
    width: 23.4375rem;
  }

  .feature_box {
    padding: 1.5rem;
    gap: 1.5rem;
  }

  /* Content Section */
  .content_section {
    gap: .875rem;
  }

  .content_heading {
    font-size: 1rem;
  }

  .content_text {
    font-size: .875rem;
  }

  .banner_container,
  .location_headline {
    font-size: 1.75rem;
    padding: .75rem 0;
    width: clamp(15.4375rem, 100%, 15.4375rem);
  }

  .footer_container {
    height: 100%;
    padding: 3.125rem 1.875rem;
    gap: .3125rem;
  }

  .navigation_box {
    width: 6.125rem;
    text-align: center;
  }

  .logo_footer_375 {
    margin-bottom: 1.5625rem;
  }
  .navigation_box {
    height: 10.5rem;
  }
}

